--- a/index.html
+++ b/index.html
@@ -274,12 +274,14 @@
         <div class="space-y-2 text-slate-700">
           <label class="flex items-center gap-2"><input type="radio" name="transport" value="باص" required> باص</label>
           <label class="flex items-center gap-2"><input type="radio" name="transport" value="سيراً على الأقدام" required> سيراً على الأقدام</label>
-          <label class="flex items-center gap-2"><input type="radio" name="transport" value="مشي" required> مشي</label>
+          <label class="flex items-center gap-2"><input type="radio" name="transport" value=" بصحبة ولي الأمر" required> ولي الأمر</label>
         </div>
 
         <div class="mt-4 p-4 rounded-2xl border border-amber-200 bg-amber-50 text-amber-900 text-sm leading-7">
           <p class="font-semibold mb-1">تنبيه:</p>
-          <p>انتظار الطالب داخل صالة الانتظار حيث إن إدارة المدرسة غير مسؤولة عن الطالب في حالة الوقوف خارج أسوار المدرسة.</p>
+          <p>في حالة انصراف الطالب (سيرا على الأقدام) يقوم ولي الأمر بالتوقيع على تعهد بتحمله مسؤولية ذلك.</p>
+ 	  <p>انتظار الطالب داخل صالة الانتظار حيث إن إدارة المدرسة غير مسؤولة عن الطالب في حالة الوقوف خارج أسوار المدرسة.</p>
+
           <label class="flex items-center gap-2 mt-3">
             <input type="checkbox" name="lobbyWaitingAware" value="أقر بالعلم" required>
             <span>أقر أنني اطلعت على التنبيه أعلاه (إجباري).</span>
